WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36858
Incorrect insertion position after typing 'ำ' (THAI CHARACTER SARA AM = 0E33)
https://bugs.webkit.org/show_bug.cgi?id=36858
Summary
Incorrect insertion position after typing 'ำ' (THAI CHARACTER SARA AM = 0E33)
Enrica Casucci
Reported
2010-03-30 15:46:11 PDT
Fails to handle properly characters with multiple glyphs. Repro steps: 1. Go to
http://www.mozilla.org/editor/midasdemo/
2. Type thai characters คำ Expected: The caret is placed next to the second character. Actual: The caret disappears.
Attachments
Patch
(4.55 KB, patch)
2010-03-30 15:55 PDT
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch
(1.11 KB, patch)
2010-04-02 00:09 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-03-30 15:55:20 PDT
Created
attachment 52093
[details]
Patch
Darin Adler
Comment 2
2010-03-30 16:06:12 PDT
Comment on
attachment 52093
[details]
Patch
> + Incorrect insertion position after typing 'ำ' (THAI CHARACTER SARA AM = 0E33)
You probably should not put the character itself in the change log. People might not open it in the right way to view UTF-8 characters. We usually stick to ASCII for the change log itself. r=me
Eric Seidel (no email)
Comment 3
2010-03-31 15:29:28 PDT
This appears to have caused fast/text/multiglyph-characters.html to fail on Tiger.
Eric Seidel (no email)
Comment 4
2010-03-31 23:33:45 PDT
Comment on
attachment 52093
[details]
Patch Looks like this was landed in
http://trac.webkit.org/changeset/56813
. I'll leave this open since Tiger is currently broken, but otherwise it could be closed.
Eric Seidel (no email)
Comment 5
2010-04-01 17:29:25 PDT
Should I check in the failing results for Tiger?
Eric Seidel (no email)
Comment 6
2010-04-02 00:09:43 PDT
Created
attachment 52386
[details]
Patch
Eric Seidel (no email)
Comment 7
2010-04-02 00:10:58 PDT
Comment on
attachment 52386
[details]
Patch I've prepared a checkin with the failing result for tiger pulled from the Tiger bot. Please let me know if this is not what's desired. Either way we need to make the Tiger bot green again so we can catch any subsequent regressions.
WebKit Commit Bot
Comment 8
2010-04-02 10:01:53 PDT
Comment on
attachment 52386
[details]
Patch Clearing flags on attachment: 52386 Committed
r57006
: <
http://trac.webkit.org/changeset/57006
>
WebKit Commit Bot
Comment 9
2010-04-02 10:01:58 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 10
2010-04-17 11:44:40 PDT
<
rdar://problem/7693772
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug