Incorrect insertion position after typing THAI CHARACTER SARA AM = 0E33. <rdar://problem/7810749> https://bugs.webkit.org/show_bug.cgi?id=36858

Reviewed by Darin Adler.

WebCore:

Test: fast/text/multiglyph-characters.html

Characters with multiple glyph were not supported correctly.
Computing the advance width was producing a division by zero.

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::advance):

LayoutTests:

* fast/text/multiglyph-characters-expected.txt: Added.
* fast/text/multiglyph-characters.html: Added.



Canonical link: https://commits.webkit.org/48106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56813 268f45cc-cd09-0410-ab3c-d52691b4dbfc